--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asfe Portfolio</title>
     <link rel="shortcut icon" href="new.jpg" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Welcome To</h1>
-   <h1><span id="name1">Asfe All Arafath's</span>  World </h1> 
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span id="name1">Asfe All Arafath's</span> World </h1>
+            <h3>My description</h3>
+            <p>I am a CSE graduate who always thrives for success individually and also as a part of a team. I am
+                willing to
+                put up my maximum effort in any situation</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/asfe-all-arafath-241141227">Hire
+                me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/my-bg.png" alt="">
+        </div>
+    </section>
+
+
 
 </body>
+
 </html>
