2nd section added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
         </div>
     </section>
 
+    <section class="section-2">
+        <div class="half-width"><img src="images/2nd.png" alt="">
+        </div>
+        <div class="half-width" id="skill">
+            <H1>Other description </H1>
+            <h2>Skills</h2>
+            <p>I have basic ideas about ERD, UML, Use case diagrams and familiar with different project
+                management tools like Microsoft Project, Jira, etc. I have basic knowledge of project management
+                and web security.</p>
+            <a class="link-button" target="_blank"
+                href="https://drive.google.com/file/d/168LFbInAD_uXEo1p5L8fBoBteA3mSBhp/view?usp=sharing">Download
+                resume</a>
+
+
+        </div>
+
+    </section>
 
 
 </body>
