--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-conainer">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span id="name1">Asfe All Arafath's</span> World </h1>
+            <h1><span class="name">Asfe All Arafath's</span> World </h1>
             <h3>My description</h3>
             <p>I am a CSE graduate who always thrives for success individually and also as a part of a team. I am
                 willing to
@@ -30,7 +30,7 @@
         </div>
     </section>
 
-    <section class="section-2">
+    <section class="section-2 flexible-conainer">
         <div class="half-width"><img src="images/2nd.png" alt="">
         </div>
         <div class="half-width" id="skill">
@@ -48,6 +48,30 @@
 
     </section>
 
+    <section class="experience-area">
+        <h1 id="ex">Experience</h1>
+        <div class="flexible-conainer">
+            <div id="experience-1" class="experiences">
+                <h1>Full Stack Web developer</h1>
+                <h3 class="name">2022-present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution</p>
+            </div>
+            <div id="experience-2" class="experiences">
+                <h1>Beginner Web developer</h1>
+                <h3 class="name">2022-2022 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>© Asfe All Arafath 2022, a Programming Hero initiative.</p>
+    </footer>
 
 </body>
 
